manifests/overlays/dev/network-policies/base/01-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-access
  namespace: sock-shop
  labels:
    policy: infrastructure
spec:
  podSelector: {}  # all pods need dns
  policyTypes:
  - Egress
  egress:
  # allow DNS queries to kube-system namespace
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
